--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,17 @@ h1{
   line-height: 1.5;
   font-weight: 900;
 }
+h2{
+  font-family: "Montserrat-bold";
+  font-size: 3rem;
+  line-height: 1.5;
+}
+h3{
+  font-family: "Montserrat-bold";
+}
+p{
+  color: #8f8f8f;
+}
  /* Navigation bar */
 .navbar {
   padding-bottom: 4.5rem;
@@ -43,3 +54,53 @@ h1{
   width: 60%;
   transform: rotate(25deg);
  }
+ /* features section */
+ #features {
+   padding: 7% 15%;
+ }
+.feature-box{
+  text-align: center;
+  padding: 5%;
+}
+.icon{
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+.icon:hover{
+  color: #ff4c68;
+}
+
+/* testimonial section */
+
+#testimonials{
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172 ;
+  color: #fff;
+}
+.testimonial-image{
+  width: 10%;
+  border-radius: 100%;
+  margin:20px;
+}
+.carousel-item{
+  padding:7% 15%;
+}
+#press{
+  background-color: #ef8172 ;
+  text-align: center;
+  padding-bottom: 3%;
+
+}
+.press-logo{
+  width: 15%;
+  margin:20px 20px 50px;
+}
+/* pricing section */
+#pricing{
+  padding:100px;
+  text-align: center;
+}
+.pricing-column{
+  padding: 3% 2%;
+}
