--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,22 @@
-
 body {
   font-family: "Montserrat";
   text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-bold";
 }
 
 p {
   color: #8f8f8f;
 }
 
-/* Headings */
-
+/* heading */
 .big-heading {
-  font-family: "Montserrat-Black";
-  font-size: 3.5rem;
+  font-family: "Montserrat-black";
+  font-size: 3rem;
   line-height: 1.5;
+  font-weight: 900;
 }
 
 .section-heading {
@@ -25,14 +24,12 @@ p {
   line-height: 1.5;
 }
 
-/* Containers */
-
-.container-fluid{
-  padding: 7% 15% 25%;
+/* containers */
+.container-fluid {
+  padding: 7% 15%;
 }
 
-/* Sections */
-
+/* section */
 .colored-section {
   background-color: #ff4c68;
   color: #fff;
@@ -42,16 +39,9 @@ p {
   background-color: #fff;
 }
 
-/* Navigation Bar */
-
+/* Navigation bar */
 .navbar {
-  padding: 0 0 4.5rem;
-}
-
-.navbar-brand {
-  font-family: "Ubuntu";
-  font-size: 2.5rem;
-  font-weight: bold;
+  padding-bottom: 4.5rem;
 }
 
 .nav-item {
@@ -60,29 +50,27 @@ p {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat-Light";
+  font-family: "Montserrat-light"
 }
 
-/* Buttons */
+.navbar-brand {
+  font-family: "ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
 
+/* download button  */
 .download-button {
   margin: 5% 3% 5% 0;
 }
 
-/* Title Section */
-
-#title {
-  background-color: #ff4c68;
-  color: #fff;
+/* titlt section */
+#title .container-fluid {
+  padding: 3% 15% 7%;
   text-align: left;
 }
 
-#title .container-fluid {
-  padding: 3% 15% 7%;
-}
-
-/* Title Image */
-
+/* titlt image */
 .title-image {
   width: 60%;
   transform: rotate(25deg);
@@ -90,8 +78,7 @@ p {
   right: 30%;
 }
 
-/* Features Section */
-
+/* features section */
 #features {
   position: relative;
 }
@@ -101,7 +88,7 @@ p {
 }
 
 .feature-box {
-  padding: 4.5%;
+  padding: 5%;
 }
 
 .icon {
@@ -113,8 +100,7 @@ p {
   color: #ff4c68;
 }
 
-/* Testimonial Section */
-
+/* testimonial section */
 #testimonials {
   background-color: #ef8172;
 }
@@ -130,7 +116,6 @@ p {
   margin: 20px;
 }
 
-
 #press {
   background-color: #ef8172;
   padding-bottom: 3%;
@@ -141,8 +126,7 @@ p {
   margin: 20px 20px 50px;
 }
 
-/* Pricing Section */
-
+/* pricing section */
 #pricing {
   padding: 100px;
 }
@@ -156,18 +140,12 @@ p {
   padding: 3% 2%;
 }
 
-/* CTA Section */
-
-
-/* Footer Section */
-
-
+/* footer section */
 .social-icon {
   margin: 20px 10px;
 }
 
 @media (max-width: 1028px) {
-
   #title {
     text-align: center;
   }
